--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.26.6",
     "axios": "^0.19.1",
+    "better-docs": "^1.4.7",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-game-kit": "^1.0.6",
@@ -17,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docs": "jsdoc -c jsdoc.conf.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +37,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8000/"
+  "proxy": "http://localhost:8000/",
+  "devDependencies": {
+    "jsdoc": "^3.6.3"
+  }
 }
